Get database role for non-oem databases

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/rotate_system_passwords.yml
@@ -1,10 +1,12 @@
+# Get the database role for none OEM databases
 - name: Get Database Role
   script: ../../../../common/files/get_database_role.sh
   register: getdatabaserole
   changed_when: false
+  when: target_environment_name is not search('hmpps-oem')
 
 - name: Change Database Password
-  when: getdatabaserole.stdout | trim == 'PRIMARY'
+  when: (getdatabaserole.stdout | default() | trim == 'PRIMARY') or (target_environment_name is search('hmpps-oem'))
   block:
     - name: Get New Password for {{ db_username }}
       include_tasks: create_random_password.yml
