--- a/playbooks/oracle_duplicate/rman-post-duplicate.yml
+++ b/playbooks/oracle_duplicate/rman-post-duplicate.yml
@@ -204,20 +204,20 @@
 - name: Update ND Parameter values
   import_playbook: update-nd-parameters.yml
   when: duplicate_target | regex_search('.*_delius_primarydb')
-# - name: Re-enable probation integration updates
-#   hosts: '{{ duplicate_target }}'
-#   gather_facts: no
-#   become: yes
-#   become_user: oracle
 
-#   tasks:
-#     - name: Trigger GitHub Actions workflow to switch probation integration services back to read-write mode
-#       shell: |
-#         environment_name=$(. ~/.bash_profile && . /etc/environment && echo $HMPPS_ENVIRONMENT)
-#         if [ "$environment_name" == 'delius-pre-prod' ]; then
-#           token=$(aws ssm get-parameter --name '/delius-pre-prod/delius/probation-integration/github/token' --region {{ region }} --output text --with-decryption --query Parameter.Value)
-#           curl -fsSL -X POST -H 'Accept: application/vnd.github+json' -H "Authorization: token $token" \
-#             --data '{"ref": "main", "inputs": {"action": "disable", "environment": "preprod"}}' \
-#             https://api.github.com/repos/ministryofjustice/hmpps-probation-integration-services/actions/workflows/readonly.yml/dispatches
-#         fi
-#       when: duplicate_target | regex_replace('(^.*)_.*$','\\1') == 'delius'
+- name: Re-enable probation integration updates
+  hosts: "{{ duplicate_target }}"
+  gather_facts: no
+  become: yes
+  become_user: oracle
+
+  tasks:
+    - name: Trigger GitHub Actions workflow to switch probation integration services back to read-write mode
+      shell: |
+        token=$(aws secretsmanager get-secret-value --secret-id {{ environment_name }}-probation-integration --region {{ region }} --query SecretString --output text| jq -r .github_token)
+        curl -fsSL -X POST -H 'Accept: application/vnd.github+json' -H "Authorization: token $token" \
+          --data '{"ref": "main", "inputs": {"action": "disable", "environment": "preprod"}}' \
+          https://api.github.com/repos/ministryofjustice/hmpps-probation-integration-services/actions/workflows/readonly.yml/dispatches
+      when:
+        - duplicate_target | regex_replace('^.*_(.*)_(.*)_primarydb$','\\1_\\2') == 'preprod_delius'
+        - source_legacy | default() == 'no'
