--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -109,7 +109,7 @@
     # Prevent Failover due to problems with password changes by disabling FSFO during password rotation
     - name: Disable Fast Start Failover
       include_role:
-        name: ../oracle_ha/build_ha
+        name: ../oracle_ha/build-ha
         tasks_from: set-fsfo-mode.yml
       when:
         - database_primary_sid is defined
