Correct spelling again

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -134,7 +134,7 @@
     # Now the passwords have been set in the wallet we can re-enable FSFO.
     - name: Re-enable Fast Start Failover
       include_role:
-        name: ../oracle_ha/build_ha
+        name: ../oracle_ha/build-ha
         tasks_from: set-fsfo-mode.yml
       when:
         - database_primary_sid is defined
