--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -110,8 +110,30 @@ jobs:
           echo "TargetEnvironment: ${{ steps.prepare.outputs.TargetEnvironment }}"
           echo "TargetHost: ${{ steps.prepare.outputs.TargetHost }}"
   
-  oracle-oem-patching:
+  get_oem_account_id:
     needs: build_target_names
+    runs-on: ubuntu-latest
+    environment: ${{ needs.build_target_names.outputs.TargetOemEnvironment }}-preapproved
+    outputs:
+       account_id: "${{ steps.output_account_id.outputs.account_id}}"
+    steps:
+      - name: output account id
+        id: output_account_id
+        run: echo "account_id=${{ vars.AWS_ACCOUNT_ID }}" >> $GITHUB_OUTPUT
+
+  get_agent_account_id:
+    needs: build_target_names
+    runs-on: ubuntu-latest
+    environment: ${{ needs.build_target_names.outputs.TargetEnvironment }}-preapproved
+    outputs:
+      account_id: "${{ steps.output_account_id.outputs.account_id}}"
+    steps:
+      - name: output account id
+        id: output_account_id
+        run: echo "account_id=${{ vars.AWS_ACCOUNT_ID }}" >> $GITHUB_OUTPUT
+
+  oracle-oem-patching:
+    needs: [build_target_names,get_oem_account_id]
     name: oracle-oem-patching
     environment: ${{ needs.build_target_names.outputs.TargetOemEnvironment }}-preapproved
     runs-on: ubuntu-latest
@@ -122,8 +144,6 @@ jobs:
       command: ansible-playbook operations/ansible/site.yml -v -e force_role=oracle-oms-setup -e role=oracle-oms-setup --tags oracle_oem_patch_upgrade 
       inventory: inventory/ansible
     continue-on-error: false
-    outputs:
-      aws_account_id: ${{ steps.save-aws-account-id.outputs.aws_account_id }}
     steps:
       - name: Checkout From hmpps-delius-operational-automation
         uses: actions/checkout@v4
@@ -165,15 +185,11 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
-      - name: Save AWS Account ID
-        id: save-aws-account-id
-        run: echo "aws_account_id=${{ vars.AWS_ACCOUNT_ID }}" >> $GITHUB_OUTPUT
-  
       - name: Configure AWS Credentials
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-to-assume: "arn:aws:iam::${{ needs.get_oem_account_id.outputs.account_id }}:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           role-duration-seconds: 21600
           aws-region: "eu-west-2"
@@ -185,7 +201,7 @@ jobs:
           $command -i $inventory --limit server_type_hmpps_oem -e target="${{ needs.build_target_names.outputs.TargetOemHost }}" ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
 
   oracle-agent-patching:
-    needs: oracle-oem-patching
+    needs: [build_target_names,get_agent_account_id]
     if: ${{ github.event.inputs.PatchAgents == 'yes' }}
     name: oracle-agent-patching
     environment: ${{ needs.build_target_names.outputs.TargetEnvironment }}-preapproved
@@ -241,7 +257,7 @@ jobs:
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID != '' && vars.AWS_ACCOUNT_ID || needs.oracle-oem-patching.outputs.aws_account_id }}:role/modernisation-platform-oidc-cicd"
+          role-to-assume: "arn:aws:iam::${{ needs.get_agent_account_id.outputs.account_id }}:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           role-duration-seconds: 21600
           aws-region: "eu-west-2"
