--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -201,7 +201,7 @@ jobs:
           $command -i $inventory --limit server_type_hmpps_oem -e target="${{ needs.build_target_names.outputs.TargetOemHost }}" ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
 
   oracle-agent-patching:
-    needs: [build_target_names,get_agent_account_id]
+    needs: [build_target_names,get_agent_account_id,oracle-oem-patching]
     if: ${{ github.event.inputs.PatchAgents == 'yes' }}
     name: oracle-agent-patching
     environment: ${{ needs.build_target_names.outputs.TargetEnvironment }}-preapproved
