--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -171,7 +171,7 @@ jobs:
           repository: ministryofjustice/hmpps-delius-operational-automation
           sparse-checkout-cone-mode: false
           sparse-checkout: |
-            playbooks/oem_blackout/oem_blackout
+            playbooks/oem_blackout
           path: roles
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
@@ -218,7 +218,9 @@ jobs:
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          ln -svf $PWD/roles/playbooks/oem_blackout/oem_blackout $PWD/operations/ansible/roles/oem_blackout
+          ln -svf $PWD/roles/playbooks/oem_blackout $PWD/operations/ansible/roles/oem_blackout
+          ls -la $PWD/roles/playbooks/oem_blackout/
+          ls -la $PWD/operations/ansible/roles/
           $command -i $inventory --limit server_type_hmpps_oem -e target="${{ needs.build_target_names.outputs.TargetOemHost }}" ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
 
   oracle-agent-patching:
@@ -252,7 +254,7 @@ jobs:
           repository: ministryofjustice/hmpps-delius-operational-automation
           sparse-checkout-cone-mode: false
           sparse-checkout: |
-            playbooks/oem_blackout/oem_blackout
+            playbooks/oem_blackout
           path: roles
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
@@ -297,6 +299,6 @@ jobs:
       - name: Start OEM Agent Update
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          ln -svf $PWD/roles/playbooks/oem_blackout/oem_blackout $PWD/operations/ansible/roles/oem_blackout
+          ln -svf $PWD/roles/playbooks/oem_blackout $PWD/operations/ansible/roles/oem_blackout
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target=${{needs.build_target_names.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
         
