--- a/.github/workflows/oracle-db-oem-patching.yml
+++ b/.github/workflows/oracle-db-oem-patching.yml
@@ -3,6 +3,14 @@ run-name: "Oracle: ${{ github.event.inputs.TargetOemEnvironment }}-oem-patching"
 on:
   workflow_dispatch:
     inputs:
+      PatchOEMHost:
+        description: "Patch OEM Host (yes/no)"
+        required: true
+        type: choice
+        default: "no"
+        options:
+          - "yes"
+          - "no"
       TargetOemEnvironment:
         description: "Target OEM Environment"
         required: true
@@ -58,9 +66,10 @@ on:
       VerboseOutput:
         description: "Verbose Output level"
         type: choice
-        default: ""
+        default: "-v"
         options:
           - ""
+          - "-v"
           - "-vv"
           - "-vvv"
           - "-vvvv"
@@ -102,10 +111,38 @@ jobs:
           echo "TargetOemHost=${TargetOemHost}" >> $GITHUB_OUTPUT
           echo "TargetEnvironment=${TargetEnvironment}" >> $GITHUB_OUTPUT
           echo "TargetHost=${TargetHost}" >> $GITHUB_OUTPUT
-
+      - name: Print Output Values (Verbose Mode)
+        run: |
+          echo "TargetOemEnvironment: ${{ steps.prepare.outputs.TargetOemEnvironment }}"
+          echo "TargetOemHost: ${{ steps.prepare.outputs.TargetOemHost }}"
+          echo "TargetEnvironment: ${{ steps.prepare.outputs.TargetEnvironment }}"
+          echo "TargetHost: ${{ steps.prepare.outputs.TargetHost }}"
   
-  oracle-oem-patching:
+  get_oem_account_id:
     needs: build_target_names
+    runs-on: ubuntu-latest
+    environment: ${{ needs.build_target_names.outputs.TargetOemEnvironment }}-preapproved
+    outputs:
+       account_id: "${{ steps.output_account_id.outputs.account_id}}"
+    steps:
+      - name: output account id
+        id: output_account_id
+        run: echo "account_id=${{ vars.AWS_ACCOUNT_ID }}" >> $GITHUB_OUTPUT
+
+  get_agent_account_id:
+    needs: build_target_names
+    runs-on: ubuntu-latest
+    environment: ${{ needs.build_target_names.outputs.TargetEnvironment }}-preapproved
+    outputs:
+      account_id: "${{ steps.output_account_id.outputs.account_id}}"
+    steps:
+      - name: output account id
+        id: output_account_id
+        run: echo "account_id=${{ vars.AWS_ACCOUNT_ID }}" >> $GITHUB_OUTPUT
+
+  oracle-oem-patching:
+    needs: [build_target_names,get_oem_account_id]
+    if: ${{ github.event.inputs.PatchOEMHost == 'yes' }}
     name: oracle-oem-patching
     environment: ${{ needs.build_target_names.outputs.TargetOemEnvironment }}-preapproved
     runs-on: ubuntu-latest
@@ -113,7 +150,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oms-setup -e role=oracle-oms-setup --tags oracle_oem_patch_upgrade 
+      command: ansible-playbook operations/ansible/site.yml -v -e force_role=oracle-oms-setup -e role=oracle-oms-setup --tags oracle_oem_patch_upgrade 
       inventory: inventory/ansible
     continue-on-error: false
     steps:
@@ -125,6 +162,17 @@ jobs:
           sparse-checkout: |
             playbooks/ansible.cfg
           path: ansible
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout From hmpps-delius-operational-automation
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/hmpps-delius-operational-automation
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oem_blackout
+          path: roles
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
 
@@ -146,7 +194,7 @@ jobs:
           repository: ministryofjustice/modernisation-platform-configuration-management
           sparse-checkout-cone-mode: false
           sparse-checkout: |
-            ansible/roles/oracle-oem-setup
+            ansible/roles/oracle-oms-setup
             ansible/roles/oracle-oem-agent-setup
             ansible/roles/secretsmanager-passwords
             ansible/roles/get-ec2-facts
@@ -161,7 +209,7 @@ jobs:
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-to-assume: "arn:aws:iam::${{ needs.get_oem_account_id.outputs.account_id }}:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           role-duration-seconds: 21600
           aws-region: "eu-west-2"
@@ -170,11 +218,12 @@ jobs:
         shell: bash
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory --limit server_type_hmpps_oem -e oem_target="environment_name_${{ needs.build_target_names.outputs.TargetOemHost }}" ${{ github.event.inputs.VerboseOutput }}
+          ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
+          $command -i $inventory --limit server_type_hmpps_oem -e target="${{ needs.build_target_names.outputs.TargetOemHost }}" ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
 
   oracle-agent-patching:
-    needs: build_target_names
-    if: ${{ github.event.inputs.PatchAgents == 'yes' }}
+    needs: [build_target_names,get_agent_account_id]
+    if: ${{ github.event.inputs.PatchAgents == 'yes' && (github.event.inputs.PatchOEMHost == 'no' || needs.oracle-oem-patching.outputs.oem_patching_done == 'true') }}
     name: oracle-agent-patching
     environment: ${{ needs.build_target_names.outputs.TargetEnvironment }}-preapproved
     runs-on: ubuntu-latest
@@ -182,7 +231,7 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
     timeout-minutes: 1440
     env:
-      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup --tags agent_ru_upgrade
+      command: ansible-playbook operations/ansible/site.yml -e force_role=oracle-oem-agent-setup -e role=oracle-oem-agent-setup --tags agent_ru_upgrade,oem_agent_gold_image 
       inventory: inventory/ansible
     continue-on-error: false
     steps:
@@ -194,6 +243,17 @@ jobs:
           sparse-checkout: |
             playbooks/ansible.cfg
           path: ansible
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+
+      - name: Checkout From hmpps-delius-operational-automation
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/hmpps-delius-operational-automation
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oem_blackout
+          path: roles
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
 
@@ -229,7 +289,7 @@ jobs:
         id: login-aws
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+          role-to-assume: "arn:aws:iam::${{ needs.get_agent_account_id.outputs.account_id }}:role/modernisation-platform-oidc-cicd"
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           role-duration-seconds: 21600
           aws-region: "eu-west-2"
@@ -237,5 +297,6 @@ jobs:
       - name: Start OEM Agent Update
         run: |
           export ANSIBLE_CONFIG=$ansible_config
-          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target=${{needs.build_target_names.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput }}
+          ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
+          $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target=${{needs.build_target_names.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput != '' && github.event.inputs.VerboseOutput || '-v' }}
         
