--- a/.github/workflows/oracle-db-oem-agent-setup.yml
+++ b/.github/workflows/oracle-db-oem-agent-setup.yml
@@ -96,6 +96,17 @@ jobs:
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
 
+      - name: Checkout From hmpps-delius-operational-automation
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/hmpps-delius-operational-automation
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oem_blackout
+          path: roles
+          ref: ${{ github.event.inputs.SourceCodeVersion }}
+          fetch-depth: 0
+  
       - name: Checkout Role From modernisation-platform-configuration-management
         uses: actions/checkout@v4
         with:
@@ -136,4 +147,5 @@ jobs:
       - name: Start OEM Agent Setup
         run: | 
             export ANSIBLE_CONFIG=$ansible_config
+            ln -svf $PWD/roles/playbooks/oem_blackout/oem-blackout $PWD/operations/ansible/roles/oem_blackout
             $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} -e target=${{needs.build_target_name.outputs.TargetHost}} ${{ github.event.inputs.VerboseOutput }}
