Add supplementary logging to EQUALITY table

--- a/playbooks/oracle_dms_setup/dms_setup/vars/delius_analytics_platform.yml
+++ b/playbooks/oracle_dms_setup/dms_setup/vars/delius_analytics_platform.yml
@@ -261,6 +261,9 @@ dms_tables:
   - name: ENFORCEMENT
     owner: DELIUS_APP_SCHEMA
     log_data: ALL
+  - name: EQUALITY
+    owner: DELIUS_APP_SCHEMA
+    log_data: ALL
   - name: EVENT
     owner: DELIUS_APP_SCHEMA
     log_data: ALL
