--- a/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
+++ b/playbooks/oracle_statistics/oracle_statistics/tasks/main.yml
@@ -143,42 +143,49 @@
         loop_var: schema
       tags: statistics
 
-    # Cannot use script module asynchronously
-    - name: Start to Gather New Schema Statistics
-      shell: |
-        . ~/.bash_profile
-          sqlplus -s /nolog <<-EOSQL
-          connect / as sysdba
-          WHENEVER SQLERROR EXIT FAILURE
-          SET FEEDBACK OFF
-          SET SERVEROUT ON
-          BEGIN
-            DBMS_STATS.gather_schema_stats(
-                ownname => '{{ schema }}'
-                ,degree  => {{ parallelism | default(1) | int }}
-                ,no_invalidate => FALSE
-            );
-          END;
-          /
-          EXIT
-          EOSQL
-      register: gather_schema_statistics
-      loop: "{{ all_schemas | upper }}"
-      loop_control:
-        loop_var: schema
-      async: 14400
-      poll: 0
+    - name: Create stats_scripts dir
+      file:
+        path: /home/oracle/admin/stats_scripts
+        owner: oracle
+        group: oinstall
+        mode: 0755
+        state: directory
 
-    - name: Wait for Statistics Gathering to finish
-      async_status:
-        jid: "{{ item.ansible_job_id }}"
-      register: wait_for_statistics
-      retries: 400
-      delay: 60
-      until: wait_for_statistics.finished
-      loop: "{{ gather_schema_statistics.results }}"
-      vars:
-        ansible_aws_ssm_timeout: 14400
+    - name: Install STAT script
+      copy:
+      src: stats.sh
+      dest: /home/oracle/admin/stats_scripts/stats.sh
+      owner: oracle
+      group: oinstall
+      mode: 0544   
+
+ #   - name: Set SSM Parameter used for Runtime details when variable is not null
+ #     set_fact:
+ #     ssm_parameter_path: '-s "{{ ssm_parameter }}"'
+ #     when: (ssm_parameter is defined)      
+
+    # The quotes in the JSON inputs can get messed up by unwanted shell interpretation.
+        # To avoid this we send the JSON as an encoded string to be decoded by the shell script.
+    - name: Enable Repository Dispatch Event if supplied
+      set_fact:
+          repository_dispatch_flag: "-r {{ repository_dispatch }} -j {{ json_inputs | b64encode }}"
+      when:
+        - repository_dispatch is defined
+        - json_inputs is defined    
+
+    - name: Create STATS Command
+      set_fact:
+            stats_command: "/home/oracle/admin/stats_scripts/stats.sh {{ schemas }} {{ parallelism}} {{{ repository_dispatch_flag|default() }} "
+    
+    - name: Show STATS Command
+      debug:
+        msg: "About to run:  {{ stats_command }}"
+
+    - name: Running STATS script in Background
+      shell: "{{ stats_command }}"
+      async: "{{ allowable_duration|default(28800) }}"
+      poll: 0
+      register: stats_cmd_output
 
     - name: Remove Transient Table Statistics Locks
       script: unlock_table_statistics.sh "{{ item.schema_name }}" "{{ item.table_names | map('dict2items') | list | flatten | map(attribute='key') | map('regex_replace','^(.*)$',"'\1'") | join(",") }}"
