Added pre-prod and prod envs to update-user-roles script

--- a/.github/workflows/ldap-update-user-roles.yml
+++ b/.github/workflows/ldap-update-user-roles.yml
@@ -8,6 +8,8 @@ on:
           options:
             - "dev"
             - "test"
+            - "preprod"
+            - "prod"
       roles:
         required: true
         type: string
