Add preprod env to "LDAP: Update User Roles"

--- a/.github/workflows/ldap-update-user-roles.yml
+++ b/.github/workflows/ldap-update-user-roles.yml
@@ -8,6 +8,7 @@ on:
           options:
             - "dev"
             - "test"
+            - "preprod"
       roles:
         required: true
         type: string
