--- a/.github/workflows/ldap-remove-user-passwords.yaml
+++ b/.github/workflows/ldap-remove-user-passwords.yaml
@@ -8,6 +8,8 @@ on:
             options:
               - "dev"
               - "test"
+              - "preprod"
+              - "prod"
 jobs:
   create-backup:
     name: Create LDAP EFS Backup in ${{ inputs.environment }}
