--- a/.github/workflows/ldap-update-user-home-area.yml
+++ b/.github/workflows/ldap-update-user-home-area.yml
@@ -8,6 +8,8 @@ on:
             options:
               - "dev"
               - "test"
+              - "preprod"
+              - "prod"
         old_home_area:
             required: true
             type: string
