--- a/.github/workflows/ldap-update-user-roles.yml
+++ b/.github/workflows/ldap-update-user-roles.yml
@@ -9,6 +9,7 @@ on:
             - "dev"
             - "test"
             - "preprod"
+            - "prod"
       roles:
         required: true
         type: string
