--- a/.github/workflows/ldap-user-expiry.yaml
+++ b/.github/workflows/ldap-user-expiry.yaml
@@ -8,6 +8,8 @@ on:
         options:
           - "dev"
           - "test"
+          - "preprod"
+          - "prod"
   workflow_call:
     inputs:
       environment:
