--- a/.github/workflows/oracle-db-toggle-fsfo.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - "DBA-849"
-      
+
+  pull_request:
+
   workflow_dispatch:
     inputs:
       TargetEnvironment:
