--- a/.github/workflows/oracle-db-toggle-fsfo.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo.yml
@@ -123,6 +123,10 @@ jobs:
           fi
           if [[ "${{ github.event.inputs.FSFOMode }}" == "enable" ]];
           then
+            # NOTE: FSFO will only be enabled if fsfo_mode is "enabled" in the
+            # relevant Ansible group_vars file for the primary database.
+            # You may also set this value to "observe" if you wish to enable
+            # FSFO in Observer-only mode.
             # The standby_number is not relevant for enabling FSFO but must
             # not be undefined, so we set it arbitrarily to 0
              $enable_command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
