--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -8,6 +8,7 @@ on:
     - cron: '00 14 * * TUE'
     - cron: '00 10 * * THU'
     - cron: '00 14 * * THU'
+  workflow_dispatch:
     
 jobs:
   prepare-run-matrix:
