--- a/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
+++ b/.github/workflows/oracle-db-toggle-fsfo-schedule.yml
@@ -3,12 +3,12 @@ on:
   push:
     branches:
       - "DBA-849"
-  schedule:
-    - cron: '00 12 * * TUE'
-    - cron: '00 14 * * TUE'
-    - cron: '00 10 * * THU'
-    - cron: '00 14 * * THU'
-  workflow_dispatch:
+  # schedule:
+  #   - cron: '00 12 * * TUE'
+  #   - cron: '00 14 * * TUE'
+  #   - cron: '00 10 * * THU'
+  #   - cron: '00 14 * * THU'
+  # workflow_dispatch:
     
 jobs:
   prepare-run-matrix:
